<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/customBackgroundColor"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbarSize="0sp"
    tools:context=".Activity.Profile_Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include1"
            layout="@layout/toolbar_layout" />


        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_below="@+id/include1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/show_update_img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_profile_img"
                app:civ_border_color="#2B82B3"
                app:civ_border_width="2dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/add_update_img_profile"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignBottom="@+id/linearLayout6"
            android:layout_marginStart="@dimen/_165sdp"
            android:padding="@dimen/_2sdp"
            android:scaleType="fitXY"
            android:src="@drawable/add_img_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout6"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/u_name_update_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_update_profile"
                    android:textColor="?attr/customTextColor"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/update_username_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/login_reg_gb"
                    android:hint="Enter user name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="#B2B2B2" />

                <View
                    android:id="@+id/view_upd_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#34ACEF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/u_email_update_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_update_profile"
                    android:textColor="?attr/customTextColor"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/update_email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/login_reg_gb"
                    android:hint="xyz@gmail.com"
                    android:padding="@dimen/_8sdp"
                    android:textColor="?attr/customTextColor"
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:id="@+id/view_upd_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#34ACEF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/u_password_update_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_update_profile"
                    android:textColor="?attr/customTextColor"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/update_password_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/login_reg_gb"
                    android:hint="Enter Password"
                    android:inputType="textVisiblePassword"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="#B2B2B2" />

                <View
                    android:id="@+id/view_upd_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#34ACEF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/u_con_password_update_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/con_password_update_profile"
                    android:textColor="?attr/customTextColor"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/update_con_password_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/login_reg_gb"
                    android:hint="Enter Confirm Password"
                    android:inputType="textVisiblePassword"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="#B2B2B2" />

                <View
                    android:id="@+id/view_upd_con_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#34ACEF" />

            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_bg"
            android:backgroundTint="?attr/customButtonColor"
            android:fontFamily="@font/inter"
            android:text="@string/btn_update_profile"
            android:textColor="?attr/customButtonTextColor"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>


</ScrollView>
